shifted to requirements.txt with pip again, (still memory consumpiton error with conda & readthedocs) used mock to get rid of cartopy dependencies in sphinx rendering

--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -13,12 +13,12 @@ sphinx:
   configuration: docs/conf.py
 
 
-conda:
-  environment: docs/environment.yml
+#conda:
+#  environment: docs/environment.yml
 
 # Optionally set the version of Python and requirements required to build your docs
-# python:
-#   version: 3.6
-#   setup_py_install: false
-#   install:
-#     - requirements: docs/requirements.txt
+python:
+  version: 3.6
+  setup_py_install: false
+  install:
+    - requirements: docs/requirements.txt
