--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -20,5 +20,6 @@ sphinx:
 python:
   version: 3.6
   setup_py_install: false
-  install:
-    - requirements: docs/requirements.txt
+
+#  install:
+#    - requirements: docs/requirements.txt
