--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -19,7 +19,7 @@ sphinx:
 # Optionally set the version of Python and requirements required to build your docs
 python:
   version: 3.6
-  setup_py_install: false
+#  setup_py_install: false
 
-#  install:
-#    - requirements: docs/requirements.txt
+  install:
+    - requirements: docs/requirements.txt
